# SlicerMultiMapper

./: CMakeLists.txt  README.md
MultiMapper/: CMakeLists.txt  MultiMapper.py
MultiMapper/Resources/: ParCoords-SEG-template.html  ParCoords-template.html  ParCoordsSegmentation-template.html  parallel-template.html
demos/parallel-plot/: index.html
